--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <a href="index.html">
           CARAVAN
           </a>
-
       </h1>
     </header>
 
@@ -41,7 +40,9 @@
     </div>
 
    <!-- footer -->
-   <footer></footer>
+   <footer>
+     <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
+   </footer>
 
   </body>
 </html>
